[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voe-power-outages"
version = "0.1.0"
description = "Volynoblenergo outage image parser and API service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "opencv-python-headless>=4.10.0,<5.0.0",
  "numpy>=2.0.0,<3.0.0",
  "prometheus-client>=0.20.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
